fixing alignment between header and content rows

--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -38,7 +38,7 @@
   border-bottom: 2px solid black;
   border-top: 2px solid black;
   margin: 10px;
-  padding: 5px;
+  padding: 5px 0;
 }
 
 .header-col {
@@ -140,7 +140,7 @@
 }
 
 .compare-button {
-  margin-left: 30px;
+  margin-left: 15px;
   margin-right: 20px;
 }
 
